[CrOS MultiDevice]: Build handler to allow setup flow to open Settings

The MultiDevice setup flow's success page has a link that is supposed
to open the MultiDevice Features Settings UI subpage. Allowing the link
to do that involved adding a browserProxy to the setup flow folder
(chrome/browser/resources/chromeos/multidevice_setup). On the C++ side
this required a handler for the browserProxy's chrome.send call.

Bug: 870064
Change-Id: I6d2e2ba8690759c0a6682dd57bc104743e940520
Reviewed-on: https://chromium-review.googlesource.com/1192210
Reviewed-by: Dave Schuyler <dschuyler@chromium.org>
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Commit-Queue: Jordy Greenblatt <jordynass@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587425}
Former-commit-id: 1a461b0056015659a36bf7b04b482a5f3e8cddaf