chrome/test/data/webui/multidevice_setup/multidevice_setup_browsertest.js
@@ -26,6 +26,7 @@ MultiDeviceSetupBrowserTest.prototype = {
   browsePreload: 'chrome://multidevice-setup/',
 
   extraLibraries: PolymerTest.getLibraries(ROOT_PATH).concat([
+    '../test_browser_proxy.js',
     'integration_test.js',
     'setup_succeeded_page_test.js',
     'start_setup_page_test.js',
